<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".AddFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_new_item"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider"
            android:foreground="@color/common_google_signin_btn_text_dark_default"
            android:visibility="visible" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/name"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:labelFor="@id/food_name_textbox"
            tools:text="@string/name" />

        <EditText
            android:id="@+id/food_name_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/manual_expiration_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:buttonTint="@color/transparentWhite"
            android:text="@string/manual_expiration_date"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/expiration_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expires_on"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/expiration_notice"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="16sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>